TAP report bug fix

--- a/report_tap/main.tex
+++ b/report_tap/main.tex
@@ -3,6 +3,8 @@
 % Author: Jack Davison
 % A nice looking TAP report with a sensible structure. Not all sections will always
 % be relevant (e.g., early on you probably won't have publications to talk about!)
+%
+% Note - "preamble.tex" contains a load of options, and it is there you can add e.g., bibliographies!
 % =================================================================================
 
 \documentclass[12pt]{article}
@@ -140,7 +142,7 @@ Listed below is a general thesis outline. Any chapter titles in quotation marks 
 
 \begin{figure}[bht]
     \centering
-    \includegraphics[width=.7\linewidth]{figures/myplot.pdf}
+    \includegraphics[width=.7\linewidth]{myplot.pdf}
     \caption{A lovely R plot, saved as a PDF rather than a PNG or JPEG.}
     \label{fig:mtcars}
 \end{figure}
