Title Page Formatting & Bug Fixes
Updated title page to be in-line with White Rose requirements. Also removed all sub-folders to make it easier to download from GitHub.

--- a/thesis/thesis_master.tex
+++ b/thesis/thesis_master.tex
@@ -7,7 +7,7 @@
 % =================================================================================
 
 % Load preamble
-\include{support/thesis_preamble}
+\include{thesis_preamble}
 
 % Start document
 \begin{document}
@@ -21,28 +21,30 @@
         right = 30mm
         }
     \begin{center}
-       \vspace*{1cm}
+        \vspace*{1cm}
 
-       \huge \textbf{Incredible Atmospheric Science}%title
+        \huge \textbf{My Awesome Thesis}\\%title
 
-       \vspace{2cm}
+        \vspace{1.5cm}
 
-       \Large \textbf{Your Name}%name
-
-       \vfill
-       \large
-       A thesis presented for the degree of\\
-       Doctor of Philosophy
-            
-       \vspace{0.8cm}
-     
-       \includegraphics[width=0.4\textwidth]{graphics/uoy_logo.png}
-       \normalsize
+        \LARGE \textbf{Your Name}%name
        
-       Department of Chemistry\\
-       University of York\\
-       United Kingdom\\
-       \monthyeardate\today
+        \vspace{1cm}
+        
+        \Large
+
+        Doctor of Philosophy
+
+        \vspace{1cm}
+
+        University of York \\
+        Chemistry
+
+        \vfill
+
+        \large
+       
+        \monthyeardate\today
             
    \end{center}
 \end{titlepage}
@@ -115,7 +117,7 @@ I declare that this thesis is a presentation of original work and I am the sole 
 \label{chapter:introduction}
 
 % Compile self contained file
-\input{sections/introduction}
+\input{introduction}
 
 \chapter{Another chapter}
 
