Update Reference Style
Change references to be for the whole document rather than by chapter, as per the UoY guidelines. Plus bug fixes.

--- a/thesis/thesis_master.tex
+++ b/thesis/thesis_master.tex
@@ -127,4 +127,7 @@ I declare that this thesis is a presentation of original work and I am the sole 
 
 \chapter{Summary and conclusions}
 
+\chapter{References}
+\printbibliography[heading = none]
+
 \end{document}
